# ModelBuilder

./: .gitignore  CMakeLists.txt  README.md  col_1_tree.dot  modelbuilder_tree.dot
cmake/: ModelBuilderConfig.cmake.in
examples/: CMakeLists.txt  ModelBuilder_example.cpp  ModelBuilder_example_build_serialized_model.cpp  ModelBuilder_example_fast.cpp  TreeBuilder_example.cpp  example_main.cpp
examples/sample_data/: ptsd.csv
include/ModelBuilder/: LeafData.hpp  ModelBuilder.hpp  MultiModelBuilder.hpp  NodeData.hpp  TreeBuilder.hpp
src/: ModelBuilder.cpp  MultiModelBuilder.cpp  TreeBuilder.cpp
tests/: CMakeLists.txt  test_modelbuilder.cpp
